<resources>
    <string name="app_name">EmqttDemo</string>
    <string name="tv_clientName">Client Name</string>
    <string name="tv_clientId">Client Id</string>
    <string name="tv_host">Host</string>
    <string name="btn_con">Connect</string>
    <string name="et_clientid">Client Id</string>
    <string name="et_clientname">Client Name</string>
    <string name="et_host">www.ranye-iot.com:1883</string>
    <string name="tv_console">Console</string>

</resources>